--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="wrapper">
       <div class="copy">
-          {{ site.time | date: '%Y' }} &copy; {{ site.title }}
+          {{ site.time | date: '%Y' }} &copy; sync.
       </div>
   </div>
 </footer>
