--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   {% seo title=false %}
   {% if site.google_plus %}<link rel="author" href="https://plus.google.com/+{{site.google_plus}}"/>{% endif %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="{{ "/assets/css/nangka.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{'/assets/css/nangka.css' | prepend:site.url}}">
 
   {% if site.google_analytics %}
   <script>
